logic of correct and wrong color

--- a/src/components/SideMenu/styles.scss
+++ b/src/components/SideMenu/styles.scss
@@ -1,5 +1,5 @@
 .containerr {
-  width: 320px;
+  width: 350px;
   height: 100%;
   background-color: #e5e9f1;
   display: flex;
@@ -44,7 +44,7 @@
       display: flex;
       justify-content: space-between;
       gap: 1rem;
-      padding: 1.4rem 2rem;
+      padding: 1.4rem 1rem;
       border-bottom: 3px solid #9ea6b0;
 
       .color {
